[package]
name = "wayfreeze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.20"
tempfile = "3.10.0"
wayland-client = "0.31.2"
wayland-protocols-wlr = {version="0.2.0", features = ["client"]}
wayland-server = "0.31.1"
xkbcommon = "0.7.0"
